# UK-Energy-Modelling-Update

./: .gitignore  12GW Surface Final.ipynb  AGENTS.md  ERW Final.ipynb  ERW_Final.xlsx  Electricity Cost Final.ipynb  LCOE_Final.xlsx  LICENSE  README.md  mzt_questions.md  pyproject.toml  requirements.txt  todo.md
.github/: copilot-instructions.md  renovate.json
.github/workflows/: lint.yaml  lint.yml  test.yaml
data/: Annex_F_final_energy_demand.xlsx  LCOE_Final.xlsx  Surface Plot Final.xlsx  UKGasDemand2018-17Dec23.xlsx  ccc_daily_demand_2050.csv
data/new/: UK_gas_demand.csv  UK_gas_demand_processed.csv  ccc_daily_demand_2050.csv
nbs/: 12GW Surface Final.ipynb  ERW Final.ipynb  Electricity Cost Final.ipynb  UK Energy Model Final.ipynb  dev.ipynb
src/: __init__.py  assumptions.py  costs.py  demand_model.py  energy_costs.py  matplotlib_style.py  misc.py  model.py  power_system.py  power_system_core.py  power_system_model.py  storage_model.py  supply_model.py  units.py  utils.py
src/data/: README.md  cb7.py  demand.py  era5.py  hdd.py  historical_demand.py  renewable_capacity_factors.py  scrape_gas_demand.py
tests/: config.py  test_assumptions.py  test_costs.py  test_demand_model.py  test_energy_costs.py  test_power_system.py  test_power_system_model.py  test_renewable_capacity_factors.py  test_storage_model.py  test_supply_model.py
tests/data/: test_cb7.py  test_demand.py  test_era5.py  test_hdd.py  test_historical_demand.py  test_renewable_capacity_factors.py
