[project]
name = "uk-energy-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pint>=0.24.4",
    "pint-pandas>=0.7.1",
    "plotly>=6.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff==0.11.12",
    "pre-commit==3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 150
target-version = "py312"
preview = true
lint.select = ["ALL"]
lint.ignore = ["S", "D100", "D101", "D102", "D103",  "D104", "D105", "D106", "D107", "D205", "CPY001", "COM812", "T201", "N812", "N815", "N817", "PD901", "EM101", "TRY003", "EM102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"